--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <header>
       
-        <a href="#" class="logo">OliveRen</a>
+        <a href="#home" class="logo">OliveRen</a>
  
         <div class="bx bx-menu" id="menu-icon"></div>
  <nav>
